tests/ui/reachable/expr_array.stderr
error: unreachable expression
  --> $DIR/expr_array.rs:9:34
   |
LL |     let x: [usize; 2] = [return, 22];
   |                          ------  ^^ unreachable expression
   |                          |
   |                          any code following this expression is unreachable
   |
note: the lint level is defined here
  --> $DIR/expr_array.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_array.rs:14:25
   |
LL |     let x: [usize; 2] = [22, return];
   |                         ^^^^^------^
   |                         |    |
   |                         |    any code following this expression is unreachable
   |                         unreachable expression

error: aborting due to 2 previous errors

